--- a/build.properties
+++ b/build.properties
@@ -12,7 +12,7 @@
 Name=Mondrian
 name=mondrian
 vendor=Pentaho
-project.revision=3.11-007
+project.revision=3.11-008-SNAPSHOT
 project.revision.major=3
 project.revision.minor=7000
 ivy.artifact.id=mondrian
