Rolling version for release

--- a/build.properties
+++ b/build.properties
@@ -12,14 +12,14 @@
 Name=Mondrian
 name=mondrian
 vendor=Pentaho
-project.revision=3.11-010-SNAPSHOT
+project.revision=3.11-010
 project.revision.major=3
 project.revision.minor=7000
 ivy.artifact.id=mondrian
 ivy.artifact.group=cortex
 impl.title=mondrian
 driver.name=Mondrian olap4j driver
-driver.version=3.11-010-SNAPSHOT
+driver.version=3.11-010
 driver.version.major=3
 driver.version.minor=7000
 
